<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/raizNovaOcorrencia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jc_fundo"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/jc_azul_800"
        app:navigationIcon="@drawable/ic_voltar"
        app:navigationIconTint="@color/jc_branco"
        app:title="@string/nova_ocorrencia_titulo"
        app:titleTextColor="@color/jc_branco" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/esp_m">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/categoriaLayout"
                style="@style/CampoTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nova_ocorrencia_categoria">

                <AutoCompleteTextView
                    android:id="@+id/categoriaInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/assuntoLayout"
                style="@style/CampoTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/esp_m"
                android:hint="@string/nova_ocorrencia_assunto"
                app:counterEnabled="true"
                app:counterMaxLength="120">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/assuntoInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLength="120"
                    android:maxLines="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nova_ocorrencia_assunto_dica"
                android:textAppearance="@style/Texto.Apoio" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descricaoLayout"
                style="@style/CampoTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/esp_m"
                android:hint="@string/nova_ocorrencia_descricao">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descricaoInput"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences"
                    android:maxLength="2000" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nova_ocorrencia_descricao_dica"
                android:textAppearance="@style/Texto.Apoio" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/jc_branco"
        android:orientation="vertical"
        android:padding="@dimen/esp_m">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enviarBotao"
            style="@style/BotaoPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nova_ocorrencia_enviar" />

        <ProgressBar
            android:id="@+id/enviarProgresso"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
